// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`switch empty fallthrough to default (0) 1`] = `
"require(\\"lualib_bundle\\");
local ____exports = {}
function ____exports.__main(self)
    local out = {}
    repeat
        local ____switch3 = 0
        local ____cond3 = ____switch3 == 1
        if ____cond3 then
            __TS__ArrayPush(out, \\"default\\")
        end
        if not ____cond3 then
            __TS__ArrayPush(out, \\"default\\")
        end
    until true
    return out
end
return ____exports"
`;

exports[`switch empty fallthrough to default (1) 1`] = `
"require(\\"lualib_bundle\\");
local ____exports = {}
function ____exports.__main(self)
    local out = {}
    repeat
        local ____switch3 = 1
        local ____cond3 = ____switch3 == 1
        if ____cond3 then
            __TS__ArrayPush(out, \\"default\\")
        end
        if not ____cond3 then
            __TS__ArrayPush(out, \\"default\\")
        end
    until true
    return out
end
return ____exports"
`;

exports[`switch produces optimal output 1`] = `
"require(\\"lualib_bundle\\");
local ____exports = {}
function ____exports.__main(self)
    local out = {}
    repeat
        local ____switch3 = 0
        local ____cond3 = ((____switch3 == 0) or (____switch3 == 1)) or (____switch3 == 2)
        if ____cond3 then
            __TS__ArrayPush(out, \\"0,1,2\\")
        end
        if ____cond3 then
            __TS__ArrayPush(out, \\"default\\")
        end
        ____cond3 = ____cond3 or (____switch3 == 3)
        if ____cond3 then
            __TS__ArrayPush(out, \\"3\\")
        end
        if not ____cond3 then
            __TS__ArrayPush(out, \\"default\\")
            __TS__ArrayPush(out, \\"3\\")
        end
    until true
    repeat
        local ____switch4 = 2
        local ____cond4 = (____switch4 == 0) or (____switch4 == 1)
        if ____cond4 then
            __TS__ArrayPush(out, \\"0,1\\")
            break
        end
        if not ____cond4 then
            __TS__ArrayPush(out, \\"default\\")
            __TS__ArrayPush(out, \\"0,1\\")
            break
        end
    until true
    repeat
        local ____switch5 = 5
        local ____cond5 = ____switch5 == 0
        if ____cond5 then
            __TS__ArrayPush(out, \\"0\\")
        end
        ____cond5 = ____cond5 or (____switch5 == 1)
        if ____cond5 then
            __TS__ArrayPush(out, \\"1\\")
            break
        end
        ____cond5 = ____cond5 or (____switch5 == 2)
        if ____cond5 then
            __TS__ArrayPush(out, \\"0,1,2\\")
        end
        ____cond5 = ____cond5 or (____switch5 == 3)
        if ____cond5 then
            __TS__ArrayPush(out, \\"3\\")
            break
        end
        if not ____cond5 then
            __TS__ArrayPush(out, \\"default\\")
        end
    until true
    return out
end
return ____exports"
`;
